// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Answer /> should render 1`] = `
.c1 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c19 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 43.75rem;
}

.c19 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  padding: 1.25rem 0;
  background-color: #fff;
}

.c7 {
  padding: 1.25rem 0;
}

.c8 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #fff;
}

.c8 > *:last-child {
  margin-bottom: 0;
}

.c20 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #ebeff3;
}

.c20 > *:last-child {
  margin-bottom: 0;
}

.c6 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
}

.c6:not([disabled]):hover,
.c6:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c6:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c6[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c6[aria-pressed="true"]:not([disabled]):hover,
.c6[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c6[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c6[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c32 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 1rem;
  color: #434956;
  line-height: 0;
  border: none;
}

.c32:hover {
  color: #8c94a6;
}

.c32:active {
  position: relative;
  top: 1px;
}

.c27 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 48px;
  width: 100%;
  background-color: white;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.25rem;
  -webkit-animation: iowhYu 0.3s ease-out;
  animation: iowhYu 0.3s ease-out;
  border-color: #fee5ad;
  box-shadow: none;
}

.c28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem;
  font-size: 1.6rem;
  background-color: #fee5ad;
}

.c29 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem;
  color: #434956;
  text-align: left;
}

.c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 {
  position: relative;
  margin: 20px auto 0 auto;
  max-width: 850px;
}

.c10 {
  position: absolute;
  top: 0.625rem;
  left: calc(-60px - 1.25rem);
  width: 60px;
  color: #4c5467;
}

.c11 {
  font-weight: 600;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c13 {
  color: #4c5467;
  font-weight: 600;
}

.c14 {
  margin-left: 1rem;
  color: #53657d;
  font-size: 0.9rem;
  display: inline-block;
}

.c15 {
  color: #4c5467;
  font-weight: 600;
}

.c16 {
  margin-left: -10px;
}

.c17 {
  margin: 20px auto;
  max-width: 850px;
  text-align: left;
}

.c26 {
  position: fixed;
  bottom: 0;
  padding: 1rem;
  width: 100%;
  z-index: 1000;
}

.c30 {
  padding: 0 0.25rem;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: left;
}

.c5 ul {
  z-index: 100;
}

.c5 li[role="option"]:nth-child(2n + 1) {
  background: #f7f7f7;
}

.c3 {
  margin-top: 0;
  font-size: 1.6rem;
  line-height: 1.4;
  color: #006ab2;
}

.c2 {
  position: relative;
  padding: 1rem 0;
  text-align: center;
}

.c2 .search__form {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 auto;
  padding: var(--spacing-small) 0;
  position: relative;
  height: 5rem;
  width: 90%;
}

.c2 .search__form button {
  margin-left: 0.5rem;
}

.c2 .search__fields {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  position: relative;
}

.c2 .search__input__icon {
  position: absolute;
  left: 0;
  top: 0;
  padding: 1.25rem 0 0 1.25rem;
  width: 2.55rem;
}

.c2 .search__sources {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  right: 0;
  margin: 0.625rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ebeff3;
  border: none;
  border-radius: 0.25rem;
}

.c2 .search__sources__icon {
  position: absolute;
  margin: 0 calc(1.25rem / 2);
  width: 1.25rem;
  height: 1.25rem;
}

.c2 .search__sources__value {
  padding: 0.5rem 2rem 0.5rem 2.5em;
  color: #26353f;
  background-color: transparent;
  background-position: top 1rem right 0.75em;
  border: 1px solid transparent;
}

.c2 .search__input {
  margin: 0;
  padding: 0 12.8rem 0 4rem;
  height: 100%;
  width: 100%;
  font-size: inherit;
  font-family: inherit;
  line-height: calc(3.625rem - 1px);
  color: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #f9f9fc;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  -webkit-transition: border 250ms ease;
  transition: border 250ms ease;
}

.c2 .search__input:focus {
  border-color: #006be6;
  outline: none;
}

.c21 {
  margin-bottom: 1rem;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c24 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #eaeaea;
  border-color: #eaeaea;
  border-bottom-color: #d1d1d1;
  min-width: 7rem;
}

.c24:not([disabled]):hover,
.c24:not([disabled]):focus {
  background: #f7f7f7;
  color: #18181c;
}

.c24:not([disabled]):active {
  color: #242429;
  background: #fff;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  outline: none;
}

.c24[aria-pressed="true"] {
  color: #18181c;
  background: #f7f7f7;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  border-top-color: #d1d1d1;
  box-shadow: inset 0 1px 2px 0 #d1d1d1;
}

.c24[aria-pressed="true"]:not([disabled]):hover,
.c24[aria-pressed="true"]:not([disabled]):focus {
  background-color: #eaeaea;
}

.c24[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #d1d1d1;
}

.c24[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

.c24 + .c23 {
  margin-left: 1rem;
}

.c25 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
  min-width: 7rem;
}

.c25:not([disabled]):hover,
.c25:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c25:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c25[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c25[aria-pressed="true"]:not([disabled]):hover,
.c25[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c25[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c25[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c25 + .c23 {
  margin-left: 1rem;
}

.c18 {
  margin-top: 2.5em;
  padding: 1rem;
  background-color: #f9f9fc;
  border-radius: 0.25rem;
}

@media print {
  .c1 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c19 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c8 {
    border: none;
    padding: 0 5pt;
  }
}

@media print {
  .c20 {
    border: none;
    padding: 0 5pt;
  }
}

@media (max-width:1200px) {
  .c10 {
    display: none;
  }
}

@media (max-width:600px) {
  .c12 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:600px) {
  .c14 {
    margin-left: 0;
  }
}

@media (max-width:980px) {
  .c2 .search__sources {
    display: none;
  }

  .c2 .search__input {
    padding-right: 1rem;
  }
}

@media (max-width:600px) {
  .c2 .search__form {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    height: auto;
  }

  .c2 .search__form button {
    margin-left: 0;
  }

  .c2 .search__input__icon {
    display: none;
  }

  .c2 .search__fields {
    margin-bottom: 0.5rem;
  }

  .c2 .search__input {
    padding: 1rem;
  }
}

<div>
  <div
    class="shadow-bottom search-widget c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          Posez votre question sur le droit du travail
        </p>
        <form
          class="search__form"
        >
          <div
            class="search__fields"
          >
            <svg
              class="search__input__icon"
              viewBox="0 0 20 20"
            >
              <title />
              <path
                d="M17.876 8.939c0 2.197-.819 4.208-2.123 5.773l4.023 4.022a.72.72 0 0 1 0 1.043.735.735 0 0 1-.522.223.736.736 0 0 1-.52-.223l-4.023-4.023a8.813 8.813 0 0 1-5.772 2.123C4.022 17.877 0 13.855 0 8.939 0 4.022 4.023 0 8.939 0c4.915 0 8.937 4.023 8.937 8.939zM9.001 16.5c4.124 0 7.499-3.375 7.499-7.5S13.125 1.5 9 1.5C4.877 1.5 1.5 4.875 1.5 9s3.376 7.5 7.5 7.5z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
            <label
              class="search__sources"
              for="contentSource"
            >
              <span
                class="hidden"
              >
                Filtrer par type de contenu
              </span>
              <svg
                class="search__sources__icon"
                viewBox="0 0 512 512"
              >
                <title>
                  Icône réponse
                </title>
                <path
                  d="M346 319c-5.522 0-10 4.477-10 10v69c0 27.57-22.43 50-50 50H178.032c-5.521 0-9.996 4.473-10 9.993l-.014 19.882-23.868-23.867a10.003 10.003 0 0 0-9.171-6.008H70c-27.57 0-50-22.43-50-50V244c0-27.57 22.43-50 50-50h101c5.522 0 10-4.477 10-10s-4.478-10-10-10H70c-38.598 0-70 31.402-70 70v154c0 38.598 31.402 70 70 70h59.858l41.071 41.071a9.997 9.997 0 0 0 10.894 2.169 10 10 0 0 0 6.177-9.233l.024-34.007H286c38.598 0 70-31.402 70-70v-69c0-5.523-4.478-10-10-10z"
                  fill="currentColor"
                />
                <path
                  d="M366.655 0h-25.309C261.202 0 196 65.202 196 145.346s65.202 145.345 145.345 145.345h25.309c12.509 0 24.89-1.589 36.89-4.729l37.387 37.366A10 10 0 0 0 458 316.255v-57.856c15.829-12.819 28.978-29.012 38.206-47.102C506.687 190.751 512 168.562 512 145.346 512 65.202 446.798 0 366.655 0zm75.328 245.535a10.003 10.003 0 0 0-3.983 7.988v38.6l-24.471-24.458a10.003 10.003 0 0 0-10.006-2.485c-11.903 3.658-24.307 5.512-36.868 5.512h-25.309c-69.117 0-125.346-56.23-125.346-125.346C216 76.23 272.23 20 341.346 20h25.309C435.771 20 492 76.23 492 145.346c0 39.731-18.23 76.249-50.017 100.189z"
                  fill="currentColor"
                />
                <path
                  d="M399.033 109.421c-1.443-20.935-18.319-37.811-39.255-39.254-11.868-.815-23.194 3.188-31.863 11.281-8.55 7.981-13.453 19.263-13.453 30.954 0 5.523 4.478 10 10 10s10-4.477 10-10c0-6.259 2.522-12.06 7.1-16.333 4.574-4.269 10.552-6.382 16.842-5.948 11.028.76 19.917 9.649 20.677 20.676.768 11.137-6.539 20.979-17.373 23.403-8.778 1.964-14.908 9.592-14.908 18.549v24.025c0 5.523 4.478 10 10 10 5.523 0 10-4.477 9.999-10v-23.226c20.15-4.868 33.669-23.306 32.234-44.127zM363.87 209.26a10.076 10.076 0 0 0-7.07-2.93c-2.63 0-5.21 1.07-7.07 2.93a10.076 10.076 0 0 0-2.93 7.07c0 2.64 1.071 5.22 2.93 7.08 1.86 1.86 4.44 2.92 7.07 2.92s5.21-1.06 7.07-2.92a10.1 10.1 0 0 0 2.93-7.08c0-2.63-1.071-5.21-2.93-7.07zM275 310H64c-5.522 0-10 4.477-10 10s4.478 10 10 10h211c5.523 0 10-4.477 10-10s-4.478-10-10-10zm7.069 58.93A10.072 10.072 0 0 0 275 366c-2.63 0-5.21 1.07-7.07 2.93A10.071 10.071 0 0 0 265 376c0 2.63 1.07 5.21 2.93 7.07 1.86 1.86 4.44 2.93 7.07 2.93s5.21-1.07 7.069-2.93A10.055 10.055 0 0 0 285 376c0-2.63-1.071-5.21-2.931-7.07zM235.667 366H64c-5.522 0-10 4.477-10 10s4.478 10 10 10h171.667c5.523 0 10-4.477 10-10s-4.478-10-10-10zM210 254H64c-5.522 0-10 4.477-10 10s4.478 10 10 10h146c5.523 0 10-4.477 10-10s-4.478-10-10-10z"
                  fill="currentColor"
                />
              </svg>
              <select
                class="search__sources__value"
                id="contentSource"
                name="source"
              >
                <option
                  value=""
                >
                  Tous contenus
                </option>
                <option
                  value="faq"
                >
                  Réponses
                </option>
                <option
                  value="code_du_travail"
                >
                  Code du travail
                </option>
                <option
                  value="fiches"
                >
                  Fiches
                </option>
                <option
                  value="modeles_de_courriers"
                >
                  Modèles
                </option>
                <option
                  value="outils"
                >
                  Outils
                </option>
                <option
                  value="annuaire"
                >
                  Annuaire
                </option>
              </select>
            </label>
            <label
              class="c4"
              for="main-search-input"
            >
              <span
                class="hidden"
              >
                Rechercher
              </span>
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="react-autowhatever-cdtn-documents-suggester"
                role="combobox"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="react-autowhatever-cdtn-documents-suggester"
                  autocomplete="off"
                  class="search__input"
                  id="main-search-input"
                  name="query"
                  placeholder="Recherche"
                  type="search"
                  value=""
                />
                <div
                  class="c5"
                  id="react-autowhatever-cdtn-documents-suggester"
                  role="listbox"
                />
              </div>
            </label>
          </div>
          <button
            aria-pressed="false"
            class="c6"
            type="submit"
          >
            Rechercher
          </button>
        </form>
      </div>
    </div>
  </div>
  <div
    class="c7"
  >
    <div
      class="c1"
    >
      <div
        class="c8"
      >
        <div
          class="c9"
        >
          <div
            class="c10"
          >
            <svg
              viewBox="0 0 50 50"
            >
              <title>
                question
              </title>
              <g
                fill="currentColor"
                fill-rule="evenodd"
              >
                <path
                  d="M33.045 30.728a.951.951 0 0 0-.955.946v6.533c0 2.61-2.143 4.733-4.775 4.733H17.003a.951.951 0 0 0-.955.947l-.001 1.882-2.28-2.26a.955.955 0 0 0-.876-.569H6.685c-2.633 0-4.775-2.123-4.775-4.733v-14.58c0-2.61 2.142-4.734 4.775-4.734h9.647a.951.951 0 0 0 .955-.946.951.951 0 0 0-.955-.947H6.685C3 17 0 19.973 0 23.627v14.58c0 3.654 2.999 6.627 6.685 6.627h5.717l3.922 3.889a.96.96 0 0 0 1.04.205.946.946 0 0 0 .59-.874l.003-3.22h9.358C31 44.834 34 41.86 34 38.207v-6.533a.951.951 0 0 0-.955-.946z"
                />
                <path
                  d="M35.201 0H32.8C25.189 0 19 6.195 19 13.81s6.19 13.811 13.798 13.811h2.403a13.82 13.82 0 0 0 3.502-.45l3.55 3.551a.949.949 0 0 0 1.62-.672v-5.498a13.942 13.942 0 0 0 3.627-4.475c.995-1.952 1.5-4.06 1.5-6.267C49 6.195 42.81 0 35.201 0zm7.152 23.33a.95.95 0 0 0-.379.76v3.667l-2.323-2.324a.948.948 0 0 0-.95-.236c-1.13.347-2.307.524-3.5.524H32.8c-6.562 0-11.9-5.343-11.9-11.91 0-6.568 5.338-11.91 11.9-11.91H35.2c6.562 0 11.9 5.342 11.9 11.91 0 3.775-1.73 7.245-4.748 9.52z"
                />
                <path
                  d="M37.99 10.71a4.005 4.005 0 0 0-3.708-3.7A4 4 0 0 0 30 10.99a.944.944 0 0 0 1.89 0c0-.59.238-1.136.67-1.539a2.099 2.099 0 0 1 1.591-.56 2.109 2.109 0 0 1 1.954 1.948 2.096 2.096 0 0 1-1.641 2.206 1.785 1.785 0 0 0-1.409 1.748v2.264a.944.944 0 0 0 1.89 0V14.87a3.971 3.971 0 0 0 3.045-4.16zM34.707 19.293A1.01 1.01 0 0 0 34 19a1.01 1.01 0 0 0-.707.293A1.008 1.008 0 0 0 33 20c0 .264.107.522.293.708a1.006 1.006 0 0 0 1.414 0A1.01 1.01 0 0 0 35 20c0-.263-.107-.52-.293-.707zM26.048 30H5.952C5.426 30 5 30.448 5 31s.426 1 .952 1h20.096c.526 0 .952-.448.952-1s-.426-1-.952-1zM26.707 35.293A1.007 1.007 0 0 0 26 35c-.263 0-.521.107-.707.293A1.007 1.007 0 0 0 25 36c0 .263.107.521.293.707.186.186.444.293.707.293.263 0 .521-.107.707-.293.186-.186.293-.443.293-.707 0-.263-.107-.521-.293-.707zM23.009 35H5.99A.996.996 0 0 0 5 36c0 .552.444 1 .991 1H23.01A.996.996 0 0 0 24 36c0-.552-.444-1-.991-1zM20.036 25H5.964C5.432 25 5 25.448 5 26s.432 1 .964 1h14.072c.532 0 .964-.448.964-1s-.432-1-.964-1z"
                />
              </g>
            </svg>
          </div>
          <div>
            <h1
              class="c11"
            >
              Article du code
            </h1>
            <div
              class="c12"
            >
              <span
                class="c13"
              >
                social groove
              </span>
              <span
                class="c14"
              >
                Mis à jour le : 
                <span
                  class="c15"
                >
                  03/11/1979
                </span>
              </span>
            </div>
          </div>
          <div
            class="c16"
          />
        </div>
        <div
          class="c17"
        >
          intro de l'article
          <div
            class=""
          >
            <p
              class="test-content"
            >
              Contenu au format 
              <strong>
                html
              </strong>
            </p>
          </div>
          <div>
            Contenu supplémentaire
          </div>
          <div
            class="c18"
          >
            pied de page
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c7"
  >
    <div
      class="c19"
    >
      <div
        class="c20"
      >
        <h3
          class="c21"
        >
          Avez-vous trouvé la réponse à votre question ?
        </h3>
        <p
          class="c22"
        >
          <button
            aria-pressed="false"
            class="c23 c24"
          >
            Non
          </button>
          <button
            aria-pressed="false"
            class="c23 c25"
          >
            Oui
          </button>
        </p>
      </div>
    </div>
  </div>
  <div
    class="c26"
  >
    <div
      class="c27"
      type="warning"
    >
      <div
        class="c28"
        type="warning"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12"
            y1="17"
            y2="17"
          />
        </svg>
      </div>
      <div
        class="c29"
        role="alert"
      >
        Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
        <a
          class="c30"
          href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
          rel="noopener noreferrer"
          target="_blank"
          title="consulter l'ordonance"
        >
          L’ouverture officielle du site
        </a>
        est prévue pour 2020.
      </div>
      <div
        class="c31"
      >
        <button
          aria-pressed="false"
          class="c32"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Answer /> should render a breadcrumbs 1`] = `
.c9 {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.c1 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c23 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 43.75rem;
}

.c23 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  padding: 1.25rem 0;
  background-color: #fff;
}

.c8 {
  padding: 1.25rem 0;
}

.c12 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #fff;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c24 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #ebeff3;
}

.c24 > *:last-child {
  margin-bottom: 0;
}

.c6 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
}

.c6:not([disabled]):hover,
.c6:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c6:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c6[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c6[aria-pressed="true"]:not([disabled]):hover,
.c6[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c6[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c6[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c36 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 1rem;
  color: #434956;
  line-height: 0;
  border: none;
}

.c36:hover {
  color: #8c94a6;
}

.c36:active {
  position: relative;
  top: 1px;
}

.c31 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 48px;
  width: 100%;
  background-color: white;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.25rem;
  -webkit-animation: iowhYu 0.3s ease-out;
  animation: iowhYu 0.3s ease-out;
  border-color: #fee5ad;
  box-shadow: none;
}

.c32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem;
  font-size: 1.6rem;
  background-color: #fee5ad;
}

.c33 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem;
  color: #434956;
  text-align: left;
}

.c35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 {
  position: relative;
  margin: 20px auto 0 auto;
  max-width: 850px;
}

.c14 {
  position: absolute;
  top: 0.625rem;
  left: calc(-60px - 1.25rem);
  width: 60px;
  color: #4c5467;
}

.c15 {
  font-weight: 600;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c17 {
  color: #4c5467;
  font-weight: 600;
}

.c18 {
  margin-left: 1rem;
  color: #53657d;
  font-size: 0.9rem;
  display: inline-block;
}

.c19 {
  color: #4c5467;
  font-weight: 600;
}

.c20 {
  margin-left: -10px;
}

.c21 {
  margin: 20px auto;
  max-width: 850px;
  text-align: left;
}

.c7 {
  background: #c9d3df;
}

.c10 {
  display: inline-block;
  padding: 0.625rem 1.25rem;
}

.c10:first-child {
  padding-left: 0;
}

.c11 {
  display: inline-block;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c30 {
  position: fixed;
  bottom: 0;
  padding: 1rem;
  width: 100%;
  z-index: 1000;
}

.c34 {
  padding: 0 0.25rem;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: left;
}

.c5 ul {
  z-index: 100;
}

.c5 li[role="option"]:nth-child(2n + 1) {
  background: #f7f7f7;
}

.c3 {
  margin-top: 0;
  font-size: 1.6rem;
  line-height: 1.4;
  color: #006ab2;
}

.c2 {
  position: relative;
  padding: 1rem 0;
  text-align: center;
}

.c2 .search__form {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 auto;
  padding: var(--spacing-small) 0;
  position: relative;
  height: 5rem;
  width: 90%;
}

.c2 .search__form button {
  margin-left: 0.5rem;
}

.c2 .search__fields {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  position: relative;
}

.c2 .search__input__icon {
  position: absolute;
  left: 0;
  top: 0;
  padding: 1.25rem 0 0 1.25rem;
  width: 2.55rem;
}

.c2 .search__sources {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  right: 0;
  margin: 0.625rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ebeff3;
  border: none;
  border-radius: 0.25rem;
}

.c2 .search__sources__icon {
  position: absolute;
  margin: 0 calc(1.25rem / 2);
  width: 1.25rem;
  height: 1.25rem;
}

.c2 .search__sources__value {
  padding: 0.5rem 2rem 0.5rem 2.5em;
  color: #26353f;
  background-color: transparent;
  background-position: top 1rem right 0.75em;
  border: 1px solid transparent;
}

.c2 .search__input {
  margin: 0;
  padding: 0 12.8rem 0 4rem;
  height: 100%;
  width: 100%;
  font-size: inherit;
  font-family: inherit;
  line-height: calc(3.625rem - 1px);
  color: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #f9f9fc;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  -webkit-transition: border 250ms ease;
  transition: border 250ms ease;
}

.c2 .search__input:focus {
  border-color: #006be6;
  outline: none;
}

.c25 {
  margin-bottom: 1rem;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c28 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #eaeaea;
  border-color: #eaeaea;
  border-bottom-color: #d1d1d1;
  min-width: 7rem;
}

.c28:not([disabled]):hover,
.c28:not([disabled]):focus {
  background: #f7f7f7;
  color: #18181c;
}

.c28:not([disabled]):active {
  color: #242429;
  background: #fff;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  outline: none;
}

.c28[aria-pressed="true"] {
  color: #18181c;
  background: #f7f7f7;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  border-top-color: #d1d1d1;
  box-shadow: inset 0 1px 2px 0 #d1d1d1;
}

.c28[aria-pressed="true"]:not([disabled]):hover,
.c28[aria-pressed="true"]:not([disabled]):focus {
  background-color: #eaeaea;
}

.c28[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #d1d1d1;
}

.c28[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

.c28 + .c27 {
  margin-left: 1rem;
}

.c29 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
  min-width: 7rem;
}

.c29:not([disabled]):hover,
.c29:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c29:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c29[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c29[aria-pressed="true"]:not([disabled]):hover,
.c29[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c29[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c29[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c29 + .c27 {
  margin-left: 1rem;
}

.c22 {
  margin-top: 2.5em;
  padding: 1rem;
  background-color: #f9f9fc;
  border-radius: 0.25rem;
}

@media print {
  .c1 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c23 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c12 {
    border: none;
    padding: 0 5pt;
  }
}

@media print {
  .c24 {
    border: none;
    padding: 0 5pt;
  }
}

@media (max-width:1200px) {
  .c14 {
    display: none;
  }
}

@media (max-width:600px) {
  .c16 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:600px) {
  .c18 {
    margin-left: 0;
  }
}

@media (max-width:980px) {
  .c2 .search__sources {
    display: none;
  }

  .c2 .search__input {
    padding-right: 1rem;
  }
}

@media (max-width:600px) {
  .c2 .search__form {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    height: auto;
  }

  .c2 .search__form button {
    margin-left: 0;
  }

  .c2 .search__input__icon {
    display: none;
  }

  .c2 .search__fields {
    margin-bottom: 0.5rem;
  }

  .c2 .search__input {
    padding: 1rem;
  }
}

<div>
  <div
    class="shadow-bottom search-widget c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          Posez votre question sur le droit du travail
        </p>
        <form
          class="search__form"
        >
          <div
            class="search__fields"
          >
            <svg
              class="search__input__icon"
              viewBox="0 0 20 20"
            >
              <title />
              <path
                d="M17.876 8.939c0 2.197-.819 4.208-2.123 5.773l4.023 4.022a.72.72 0 0 1 0 1.043.735.735 0 0 1-.522.223.736.736 0 0 1-.52-.223l-4.023-4.023a8.813 8.813 0 0 1-5.772 2.123C4.022 17.877 0 13.855 0 8.939 0 4.022 4.023 0 8.939 0c4.915 0 8.937 4.023 8.937 8.939zM9.001 16.5c4.124 0 7.499-3.375 7.499-7.5S13.125 1.5 9 1.5C4.877 1.5 1.5 4.875 1.5 9s3.376 7.5 7.5 7.5z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
            <label
              class="search__sources"
              for="contentSource"
            >
              <span
                class="hidden"
              >
                Filtrer par type de contenu
              </span>
              <svg
                class="search__sources__icon"
                viewBox="0 0 512 512"
              >
                <title>
                  Icône réponse
                </title>
                <path
                  d="M346 319c-5.522 0-10 4.477-10 10v69c0 27.57-22.43 50-50 50H178.032c-5.521 0-9.996 4.473-10 9.993l-.014 19.882-23.868-23.867a10.003 10.003 0 0 0-9.171-6.008H70c-27.57 0-50-22.43-50-50V244c0-27.57 22.43-50 50-50h101c5.522 0 10-4.477 10-10s-4.478-10-10-10H70c-38.598 0-70 31.402-70 70v154c0 38.598 31.402 70 70 70h59.858l41.071 41.071a9.997 9.997 0 0 0 10.894 2.169 10 10 0 0 0 6.177-9.233l.024-34.007H286c38.598 0 70-31.402 70-70v-69c0-5.523-4.478-10-10-10z"
                  fill="currentColor"
                />
                <path
                  d="M366.655 0h-25.309C261.202 0 196 65.202 196 145.346s65.202 145.345 145.345 145.345h25.309c12.509 0 24.89-1.589 36.89-4.729l37.387 37.366A10 10 0 0 0 458 316.255v-57.856c15.829-12.819 28.978-29.012 38.206-47.102C506.687 190.751 512 168.562 512 145.346 512 65.202 446.798 0 366.655 0zm75.328 245.535a10.003 10.003 0 0 0-3.983 7.988v38.6l-24.471-24.458a10.003 10.003 0 0 0-10.006-2.485c-11.903 3.658-24.307 5.512-36.868 5.512h-25.309c-69.117 0-125.346-56.23-125.346-125.346C216 76.23 272.23 20 341.346 20h25.309C435.771 20 492 76.23 492 145.346c0 39.731-18.23 76.249-50.017 100.189z"
                  fill="currentColor"
                />
                <path
                  d="M399.033 109.421c-1.443-20.935-18.319-37.811-39.255-39.254-11.868-.815-23.194 3.188-31.863 11.281-8.55 7.981-13.453 19.263-13.453 30.954 0 5.523 4.478 10 10 10s10-4.477 10-10c0-6.259 2.522-12.06 7.1-16.333 4.574-4.269 10.552-6.382 16.842-5.948 11.028.76 19.917 9.649 20.677 20.676.768 11.137-6.539 20.979-17.373 23.403-8.778 1.964-14.908 9.592-14.908 18.549v24.025c0 5.523 4.478 10 10 10 5.523 0 10-4.477 9.999-10v-23.226c20.15-4.868 33.669-23.306 32.234-44.127zM363.87 209.26a10.076 10.076 0 0 0-7.07-2.93c-2.63 0-5.21 1.07-7.07 2.93a10.076 10.076 0 0 0-2.93 7.07c0 2.64 1.071 5.22 2.93 7.08 1.86 1.86 4.44 2.92 7.07 2.92s5.21-1.06 7.07-2.92a10.1 10.1 0 0 0 2.93-7.08c0-2.63-1.071-5.21-2.93-7.07zM275 310H64c-5.522 0-10 4.477-10 10s4.478 10 10 10h211c5.523 0 10-4.477 10-10s-4.478-10-10-10zm7.069 58.93A10.072 10.072 0 0 0 275 366c-2.63 0-5.21 1.07-7.07 2.93A10.071 10.071 0 0 0 265 376c0 2.63 1.07 5.21 2.93 7.07 1.86 1.86 4.44 2.93 7.07 2.93s5.21-1.07 7.069-2.93A10.055 10.055 0 0 0 285 376c0-2.63-1.071-5.21-2.931-7.07zM235.667 366H64c-5.522 0-10 4.477-10 10s4.478 10 10 10h171.667c5.523 0 10-4.477 10-10s-4.478-10-10-10zM210 254H64c-5.522 0-10 4.477-10 10s4.478 10 10 10h146c5.523 0 10-4.477 10-10s-4.478-10-10-10z"
                  fill="currentColor"
                />
              </svg>
              <select
                class="search__sources__value"
                id="contentSource"
                name="source"
              >
                <option
                  value=""
                >
                  Tous contenus
                </option>
                <option
                  value="faq"
                >
                  Réponses
                </option>
                <option
                  value="code_du_travail"
                >
                  Code du travail
                </option>
                <option
                  value="fiches"
                >
                  Fiches
                </option>
                <option
                  value="modeles_de_courriers"
                >
                  Modèles
                </option>
                <option
                  value="outils"
                >
                  Outils
                </option>
                <option
                  value="annuaire"
                >
                  Annuaire
                </option>
              </select>
            </label>
            <label
              class="c4"
              for="main-search-input"
            >
              <span
                class="hidden"
              >
                Rechercher
              </span>
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="react-autowhatever-cdtn-documents-suggester"
                role="combobox"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="react-autowhatever-cdtn-documents-suggester"
                  autocomplete="off"
                  class="search__input"
                  id="main-search-input"
                  name="query"
                  placeholder="Recherche"
                  type="search"
                  value=""
                />
                <div
                  class="c5"
                  id="react-autowhatever-cdtn-documents-suggester"
                  role="listbox"
                />
              </div>
            </label>
          </div>
          <button
            aria-pressed="false"
            class="c6"
            type="submit"
          >
            Rechercher
          </button>
        </form>
      </div>
    </div>
  </div>
  <nav
    class="c7"
  >
    <div
      class="c8"
    >
      <div
        class="c1"
      >
        <ul
          class="c9"
        >
          <li
            class="c10"
          >
            <a
              href="/themes/tag-1"
              title="Voir le theme tag1"
            >
              tag1
            </a>
          </li>
          <li
            aria-hidden="true"
            class="c11"
          >
             » 
          </li>
          <li
            class="c10"
          >
            <a
              href="/themes/tag-2"
              title="Voir le theme tag2"
            >
              tag2
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
  <div
    class="c8"
  >
    <div
      class="c1"
    >
      <div
        class="c12"
      >
        <div
          class="c13"
        >
          <div
            class="c14"
          >
            <svg
              viewBox="0 0 50 50"
            >
              <title>
                question
              </title>
              <g
                fill="currentColor"
                fill-rule="evenodd"
              >
                <path
                  d="M33.045 30.728a.951.951 0 0 0-.955.946v6.533c0 2.61-2.143 4.733-4.775 4.733H17.003a.951.951 0 0 0-.955.947l-.001 1.882-2.28-2.26a.955.955 0 0 0-.876-.569H6.685c-2.633 0-4.775-2.123-4.775-4.733v-14.58c0-2.61 2.142-4.734 4.775-4.734h9.647a.951.951 0 0 0 .955-.946.951.951 0 0 0-.955-.947H6.685C3 17 0 19.973 0 23.627v14.58c0 3.654 2.999 6.627 6.685 6.627h5.717l3.922 3.889a.96.96 0 0 0 1.04.205.946.946 0 0 0 .59-.874l.003-3.22h9.358C31 44.834 34 41.86 34 38.207v-6.533a.951.951 0 0 0-.955-.946z"
                />
                <path
                  d="M35.201 0H32.8C25.189 0 19 6.195 19 13.81s6.19 13.811 13.798 13.811h2.403a13.82 13.82 0 0 0 3.502-.45l3.55 3.551a.949.949 0 0 0 1.62-.672v-5.498a13.942 13.942 0 0 0 3.627-4.475c.995-1.952 1.5-4.06 1.5-6.267C49 6.195 42.81 0 35.201 0zm7.152 23.33a.95.95 0 0 0-.379.76v3.667l-2.323-2.324a.948.948 0 0 0-.95-.236c-1.13.347-2.307.524-3.5.524H32.8c-6.562 0-11.9-5.343-11.9-11.91 0-6.568 5.338-11.91 11.9-11.91H35.2c6.562 0 11.9 5.342 11.9 11.91 0 3.775-1.73 7.245-4.748 9.52z"
                />
                <path
                  d="M37.99 10.71a4.005 4.005 0 0 0-3.708-3.7A4 4 0 0 0 30 10.99a.944.944 0 0 0 1.89 0c0-.59.238-1.136.67-1.539a2.099 2.099 0 0 1 1.591-.56 2.109 2.109 0 0 1 1.954 1.948 2.096 2.096 0 0 1-1.641 2.206 1.785 1.785 0 0 0-1.409 1.748v2.264a.944.944 0 0 0 1.89 0V14.87a3.971 3.971 0 0 0 3.045-4.16zM34.707 19.293A1.01 1.01 0 0 0 34 19a1.01 1.01 0 0 0-.707.293A1.008 1.008 0 0 0 33 20c0 .264.107.522.293.708a1.006 1.006 0 0 0 1.414 0A1.01 1.01 0 0 0 35 20c0-.263-.107-.52-.293-.707zM26.048 30H5.952C5.426 30 5 30.448 5 31s.426 1 .952 1h20.096c.526 0 .952-.448.952-1s-.426-1-.952-1zM26.707 35.293A1.007 1.007 0 0 0 26 35c-.263 0-.521.107-.707.293A1.007 1.007 0 0 0 25 36c0 .263.107.521.293.707.186.186.444.293.707.293.263 0 .521-.107.707-.293.186-.186.293-.443.293-.707 0-.263-.107-.521-.293-.707zM23.009 35H5.99A.996.996 0 0 0 5 36c0 .552.444 1 .991 1H23.01A.996.996 0 0 0 24 36c0-.552-.444-1-.991-1zM20.036 25H5.964C5.432 25 5 25.448 5 26s.432 1 .964 1h14.072c.532 0 .964-.448.964-1s-.432-1-.964-1z"
                />
              </g>
            </svg>
          </div>
          <div>
            <h1
              class="c15"
            >
              Article du code
            </h1>
            <div
              class="c16"
            >
              <span
                class="c17"
              >
                social groove
              </span>
              <span
                class="c18"
              >
                Mis à jour le : 
                <span
                  class="c19"
                >
                  03/11/1979
                </span>
              </span>
            </div>
          </div>
          <div
            class="c20"
          />
        </div>
        <div
          class="c21"
        >
          intro de l'article
          <div
            class=""
          >
            <p
              class="test-content"
            >
              Contenu au format 
              <strong>
                html
              </strong>
            </p>
          </div>
          <div>
            Contenu supplémentaire
          </div>
          <div
            class="c22"
          >
            pied de page
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c8"
  >
    <div
      class="c23"
    >
      <div
        class="c24"
      >
        <h3
          class="c25"
        >
          Avez-vous trouvé la réponse à votre question ?
        </h3>
        <p
          class="c26"
        >
          <button
            aria-pressed="false"
            class="c27 c28"
          >
            Non
          </button>
          <button
            aria-pressed="false"
            class="c27 c29"
          >
            Oui
          </button>
        </p>
      </div>
    </div>
  </div>
  <div
    class="c30"
  >
    <div
      class="c31"
      type="warning"
    >
      <div
        class="c32"
        type="warning"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12"
            y1="17"
            y2="17"
          />
        </svg>
      </div>
      <div
        class="c33"
        role="alert"
      >
        Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
        <a
          class="c34"
          href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
          rel="noopener noreferrer"
          target="_blank"
          title="consulter l'ordonance"
        >
          L’ouverture officielle du site
        </a>
        est prévue pour 2020.
      </div>
      <div
        class="c35"
      >
        <button
          aria-pressed="false"
          class="c36"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
